# pi_1

./: README.md  api_projeto_pi_final.py  app.py  conect_mysql.py  formulario_lojas.py  pyproject.toml  requirements.txt
.github/workflows/: main_heroku.yml  main_lojaseroteiros.yml
templates/: base.html  bottombar.html  cadastrar_loja.html  index.html  lojas.html  roteiro.html
